# AmigaXboxDirect

./: bootstrap.sh  entry.sh  install.sh  main.py  manifest.json  pyproject.toml  requirements.txt  service_config.json  setup.cfg  setup.py
launch/: joystick_app.launch.py
libs/: joystick_utils.py
libs/amiga_package/: __init__.py  ops.py
src/amiga_xbox_direct/: __init__.py  bluetooth.py  controller_input.py  main.py
ts/: index.html
ts/src/: App.tsx  main.tsx
