[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AmigaXboxDirect"
version = "0.1.0"
description = "Xbox controller input to drive Farm-ng Amiga robot over gRPC"
authors = [
  { name="Jack Marsh" }
]
license = "MIT"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["src"]
