[metadata]
name = AmigaXboxDirect
version = 0.1.0
description = Xbox controller input for Farm-ng Amiga robot
author = Jack Marsh
license = MIT

[options]
packages = find:
install_requires =
    farm-ng-core
    inputs
    fastapi
    protobuf
    evdev
    grpcio
    uvicorn

[options.package_data]
* = *.json

[options.entry_points]
console_scripts =
    amiga-xbox-direct = amiga_xbox_direct.main:main

[tool:pytest]
testpaths = test
